RESOLVED FIXED88357
WebLayerTreeRenderer behaves wrongly when no contentsScale is set.
https://bugs.webkit.org/show_bug.cgi?id=88357
Summary WebLayerTreeRenderer behaves wrongly when no contentsScale is set.
Jocelyn Turcotte
Reported 2012-06-05 12:48:19 PDT
WebLayerTreeRenderer behaves wrongly when no contentsScale is set.
Attachments
Patch (1.60 KB, patch)
2012-06-05 12:49 PDT, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2012-06-05 12:49:52 PDT
Alexis Menard (darktears)
Comment 2 2012-06-05 12:59:22 PDT
Comment on attachment 145855 [details] Patch Clearing flags on attachment: 145855 Committed r119516: <http://trac.webkit.org/changeset/119516>
Alexis Menard (darktears)
Comment 3 2012-06-05 12:59:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.