WebLayerTreeRenderer behaves wrongly when no contentsScale is set. https://bugs.webkit.org/show_bug.cgi?id=88357

Patch by Jocelyn Turcotte <jocelyn.turcotte@nokia.com> on 2012-06-05
Reviewed by Alexis Menard.

The contentsScale needs to get a default value in case no
value is explicitely set yet.
This fixes the blank-until-resize problem when running MiniBrowser
in --desktop mode.

* UIProcess/WebLayerTreeRenderer.cpp:
(WebKit::WebLayerTreeRenderer::WebLayerTreeRenderer):


Canonical link: https://commits.webkit.org/106179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119516 268f45cc-cd09-0410-ab3c-d52691b4dbfc